--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ on:
     tags: ["v*.*.*"]
 
 env:
-  platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6,linux/s390x,linux/ppc64le
+  platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6,linux/ppc64le
 
 jobs:
   main:
